<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.magdales.alarmandstopwatch.StopwatchFragment">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context="com.magdales.alarmandstopwatch.StopwatchFragment">

        <TextView
            android:id="@+id/hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/hour"
            android:textColor="@android:color/background_light"
            android:textSize="72sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/minute"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/colon1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/colon"
            android:textColor="@android:color/background_light"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="@+id/minute"
            app:layout_constraintEnd_toStartOf="@+id/minute"
            app:layout_constraintStart_toEndOf="@+id/hour"
            app:layout_constraintTop_toTopOf="@+id/hour" />

        <TextView
            android:id="@+id/minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minute"
            android:textColor="@android:color/background_light"
            android:textSize="72sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/colon2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/colon"
            android:textColor="@android:color/background_light"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="@+id/seconds"
            app:layout_constraintEnd_toStartOf="@+id/seconds"
            app:layout_constraintStart_toEndOf="@+id/minute"
            app:layout_constraintTop_toTopOf="@+id/minute" />

        <TextView
            android:id="@+id/seconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="248dp"
            android:layout_marginStart="8dp"
            android:text="@string/seconds"
            android:textColor="@android:color/background_light"
            android:textSize="72sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/colon2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:alpha="51"
            android:text="@string/h"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/hour"
            app:layout_constraintHorizontal_bias="0.537"
            app:layout_constraintStart_toStartOf="@+id/hour"
            app:layout_constraintTop_toBottomOf="@+id/hour" />

        <TextView
            android:id="@+id/m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:alpha="51"
            android:text="@string/m"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/minute"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/minute"
            app:layout_constraintTop_toBottomOf="@+id/minute" />

        <TextView
            android:id="@+id/s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:alpha="51"
            android:text="@string/s"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/seconds"
            app:layout_constraintHorizontal_bias="0.463"
            app:layout_constraintStart_toStartOf="@+id/seconds"
            app:layout_constraintTop_toBottomOf="@+id/seconds" />

        <ImageButton
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/todo"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/startButton"
            app:layout_constraintEnd_toStartOf="@+id/startButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/startButton"
            app:srcCompat="@drawable/plus" />

        <ImageButton
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/m"
            app:srcCompat="@drawable/ic_play" />

        <ImageButton
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/todo"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/startButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/startButton"
            app:layout_constraintTop_toTopOf="@+id/startButton"
            app:srcCompat="@drawable/remove" />

        <TextView
            android:id="@+id/milli_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/milliseconds"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/startButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/m" />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>
